spacing and alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ a:hover {
 
 .nav-open {
     border-radius: 10px;
-    height: 35vh;
+    height: 40vh;
     width: 50vw;
 }
 
@@ -99,11 +99,10 @@ a:hover {
     align-items: center;
     top: 0;
     right: 0;
-    height: 35vh;
+    height: 40vh;
     transition: display 150ms ease;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently
@@ -154,6 +153,68 @@ nav:hover {
     color: rgb(250, 250, 250);
 }
 
+@media (min-width: 576px) {
+    .nav-closed {
+        height: 7vw;
+        width: 7vw;
+    }
+    .nav-open {
+        border-radius: 20px;
+        height: 45vh;
+        width: 25vw;
+    }
+    .nav-icon {
+        background-image: url("../assets/images/menu.svg");
+        background-size: contain;
+        height: 3vw;
+        width: 3vw;
+    }
+    .nav-icon-container {
+        height: 7vw;
+        width: 7vw;
+    }
+    .nav-links-wrapper {
+        height: 45vh;
+    }
+    .nav-links-wrapper {
+        margin-left: 0.25em;
+    }
+    .nav-links {
+        font-size: 0.8em;
+    }
+}
+
+@media (min-width: 768px) {
+    .nav-closed {
+        height: 13vw;
+        width: 13vw;
+    }
+    .nav-open {
+        border-radius: 20px;
+        height: 35vh;
+        width: 45vw;
+    }
+    .nav-icon {
+        background-image: url("../assets/images/menu.svg");
+        background-size: contain;
+        height: 6vw;
+        width: 6vw;
+    }
+    .nav-icon-container {
+        height: 13vw;
+        width: 13vw;
+    }
+    .nav-links-wrapper {
+        height: 35vh;
+    }
+    .nav-links-wrapper {
+        margin-left: 0.25em;
+    }
+    .nav-links {
+        font-size: 1.5em;
+    }
+}
+
 @media (min-width: 992px) {
     .nav-closed {
         height: 1.8em;
@@ -161,7 +222,7 @@ nav:hover {
     }
     .nav-open {
         border-radius: 20px;
-        height: 5em;
+        height: 6em;
         width: 7em;
     }
     .nav-icon {
@@ -175,38 +236,7 @@ nav:hover {
         width: 1.8em;
     }
     .nav-links-wrapper {
-        height: 5em;
-    }
-    .nav-links-wrapper {
-        margin-left: 0.25em;
-    }
-    .nav-links {
-        font-size: 0.5em;
-    }
-}
-
-@media (min-width: 1200px) {
-    .nav-closed {
-        height: 1.8em;
-        width: 1.8em;
-    }
-    .nav-open {
-        border-radius: 20px;
-        height: 5em;
-        width: 7em;
-    }
-    .nav-icon {
-        background-image: url("../assets/images/menu.svg");
-        background-size: contain;
-        height: 0.8em;
-        width: 0.8em;
-    }
-    .nav-icon-container {
-        height: 1.8em;
-        width: 1.8em;
-    }
-    .nav-links-wrapper {
-        height: 5em;
+        height: 6em;
     }
     .nav-links-wrapper {
         margin-left: 0.25em;
@@ -225,8 +255,19 @@ nav:hover {
 .hero {
     position: absolute;
     top: 55%;
-    left: 10%;
+    left: 5vw;
     color: #212529;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        left: 10%;
+    }
+}
+
+#about {
+    transform: translateY(3em);
+    margin-top: 3em;
 }
 
 /* Info sections */
@@ -346,7 +387,7 @@ nav:hover {
     transition: height 380ms cubic-bezier(0.32, 1.04, 0.46, 1.08);
 }
 
-/* Featured Projects */
+/* Past Projects */
 
 .project {
     /*height: 50vh;*/
